Se agregó instagram a la sección footer y se agregó un <script> después del <html>

--- a/index.html
+++ b/index.html
@@ -33,5 +33,13 @@
         <h2>Relacionado</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti unde dolorum sapiente, dignissimos nesciunt saepe debitis, magnam officiis pariatur perferendis maiores. Reprehenderit enim neque excepturi maiores molestias architecto ipsum esse.</p>
     </aside>
+    <footer>
+        <h4>All rights goes to </h4>
+        <p>Seguinos en:</p>
+        <a  href="instragram.com"></a>
+        <a  href="https://www.instagram.com/"></a>
+    </footer>
 </body>
 </html>
+<script>
+</script>
